# agent-project

./: .gitignore  BLUEPRINT DEFINITIVO.md  Blueprint Criação de Agentes Personalizados.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Fase 1 — Concluir Benchmark e Criar Base de Conhecimento.md  Fase 16.10 — Model Pool Manager.md  Fase 16.15 — Hardware Adaptive Runtime.md  Fase 16.9 — Runtime Hardening.md  Fase 17.6 — Memory Visualization.md  PerformanceReport.txt  Plano Completo para Teste de Conversação Multiagente com UI.md  Plano Detalhado de Testes de Interação e Prompts do AgentOS.md  Plano de Ação Recomendação de Compatibilidade de Modelos.md  Plano de Implementação AgentOS – Otimização com Surrogate Models.md  README.md  README.pt-BR.md  SECURITY.md  Security Layer.md  UI do Workflow Editor.md  adiciona brain ao o projeto.md  agent_engine_checklist.md  agent_memory.db-journal  agent_memory.db-shm  agent_memory.db-wal  apocalypse_log.csv  audit_user_profile.json  audit_vectors.jsonl  benchmark_log.txt  benchmark_report.txt  benchmark_results.csv  blue print Agent Governance & Compliance Engine.md  blue print organizaçao.md  build_log.txt  cache.py  download_all.py  episodic_memory.jsonl  final_user_profile.json  (+34 more)
.snapshots/snapshot_0009/: meta.txt
.snapshots/snapshot_0015/: meta.txt
.snapshots/snapshot_0058/: meta.txt
.snapshots/snapshot_0090/: meta.txt
ideias/: ideias.md
include/AgentEngine/: Agent.h  CEOAgent.h  ManagerAgent.h  ReviewerAgent.h  Task.h  WorkerAgent.h
include/AgentProfiles/: AgentProfiles.h
include/CapabilityEngine/: CapabilityEngine.h
include/ChangeManagement/: ChangeManagement.h
include/Cognitive/: Agent.h  AutoRecovery.h  AutonomousLoop.h  BottleneckDetector.h  BottleneckType.h  ContextManager.h  HardwareWatchdog.h  IEmbeddingEngine.h  KnowledgeBase.h  LearningEngine.h  LlamaEmbeddingEngine.h  MemoryEngine.h  MetricsCollector.h  MockEmbeddingEngine.h  ModelRegistry.h  Orchestrator.h  SummarizerAgent.h  SurrogateRouter.h  TaskAnalyzer.h  TaskType.h  UserProfileManager.h  VectorSearch.h
include/ContextEngine/: ContextEngine.h
include/Core/: CEOPlanner.h  ComplexityEngine.h  ComplexityValidator.h  HeuristicFallbackPlanner.h  LlamaPlannerModel.h  OrganizationMemory.h  PlannerModel.h  PlannerValidator.h  RoleLibrary.h  RoleTemplates.h
include/CostMonitor/: CostMonitor.h
include/EventBus/: Event.h  EventBus.h
include/ExperienceReplayEngine/: ExperienceReplayEngine.h
include/GovernanceEngine/: GovernanceEngine.h
include/HardwareAdaptiveRuntime/: HardwareProfileManager.h
include/KnowledgeGraphEngine/: KnowledgeGraphEngine.h
include/LearningEngine/: LearningEngine.h  (+1 more)
models/: Mistral-7B-Teste.gguf  Modelo-Teste_123.fp16  whisper-large-v3.gguf
roadmaps/: Blueprint Criação de Agentes Personalizados.md  CONTRIBUTING.md  Fase 14 — Agent Reasoning & Corporate Timeline Engine.md  Fase 16.11 — Memory Leak Apocalypse.md  Fase 16.12 — Surrogate Decision Layer.md  Fase 16.13 — Experience Replay Engine.md  Fase 16.14 — Runtime Learning Layer.md  Fase 16.16 — Hell Breaker 3.0.md  Fase 18 — Release Candidate (RC).md  Fase 8 — Context Management Engine (CME).md  Plano Completo de Personas para AgentOS.md  Plano Estratégico para Não repetir explicações.md  Plano de Desenvolvimento — Migração do AgentOS para Planner LLM Real.md  Plano de Implementação AgentOS – Otimização com Surrogate Models.md  THIRD_PARTY_LICENSES.md  UI do Workflow Editor.md  loja de plugin.md  melhorar agentes personas 2.0.md  memory_engine_checklist.md  metrica final teste de empresas.md  pipeline de colaboraçao de agentes.md  pipeline modular de pré-processamento.md  prompts com estado entre eles.md  roadmap agentOS corrigindo agentOS.md  ui_blueprint_v1.md
src/: main.cpp  test_runner.cpp
src/Cognitive/: AutoRecovery.cpp  AutonomousLoop.cpp  BottleneckDetector.cpp  CMakeLists.txt  ContextManager.cpp  HardwareWatchdog.cpp  KnowledgeBase.cpp  LearningEngine.cpp  LlamaEmbeddingEngine.cpp  MemoryEngine.cpp  MetricsCollector.cpp  MockEmbeddingEngine.cpp  ModelRegistry.cpp  Orchestrator.cpp  SummarizerAgent.cpp  SurrogateRouter.cpp  TaskAnalyzer.cpp  UserProfileManager.cpp  VectorSearch.cpp
src/ProjectContext/: CMakeLists.txt  CodeGraph.cpp  ContextBudgetManager.cpp  ContextBuilder.cpp  ContextRetriever.cpp  EmbeddingEngine.cpp  FileScanner.cpp  FileSummarizer.cpp  FileSummaryStore.cpp  IntentRouter.cpp  LlamaEmbeddings.cpp  ProjectScanner.cpp  PromptComposer.cpp  Reranker.cpp  SemanticStore.cpp  SymbolGraph.cpp  SymbolIndexStore.cpp  SymbolIndexer.cpp  TextChunker.cpp  UniversalIndexer.cpp
src/UI/: AgentListComponent.cpp  CMakeLists.txt  CognitiveDashboardComponent.cpp  CreateAgentDialog.cpp  DashboardComponent.cpp  LanguageManager.cpp  LogViewerComponent.cpp  ModelManagerDialog.cpp  ProjectPanelComponent.cpp  SidebarComponent.cpp  SystemMonitorComponent.cpp  UI.cpp  WorkspaceComponent.cpp
src/UI/MemoryVisualization/: MemoryVisualizationComponent.cpp
src/UI/WorkflowEditor/: WorkflowEditorComponent.cpp
tests/: benchmark_runner.cpp  memory_leak_apocalypse.cpp  phase6_ceo_approval.txt  phase6_plan_rollback.txt  run_agentos_tests.cpp  test_autonomous_loop.cpp  test_capabilityengine.cpp  test_cognitive_architecture.cpp  test_cognitive_audit_suite.cpp  test_cognitive_pipeline.cpp  test_context_compression.cpp  test_context_manager.cpp  test_contextengine.cpp  test_decision_integration.cpp  test_diagnostic_prompt.cpp  test_experience_replay.cpp  test_final_validation_suite.cpp  test_hardening_validation.cpp  test_hell_breaker_3.cpp  test_hell_scale.cpp  test_hierarchy.cpp  test_human_override.cpp  test_humanized_prompt.cpp  test_humanized_prompts.cpp  test_knowledge_base.cpp  test_learning_engine.cpp  test_localruntime.cpp  test_memory_engine.cpp  test_memoryengine_v2.cpp  test_model_registry.cpp  test_modelmanager.cpp  test_modelmanager_mini.cpp  test_multi_agent.cpp  test_multi_persona_simulation.cpp  test_multiagent.cpp  test_observability.cpp  test_performance_profiler.cpp  test_performance_stress.cpp  test_phase11_tee.cpp  test_phase6.cpp  (+15 more)
(+174 files in other folders)
